<resources>
    <string name="app_name">CPing</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rating_changes">Ratings &amp; Ranks</string>
    <string name="nothing_to_show">Nothing to show</string>
    <string name="atcoder">AtCoder</string>
    <string name="leetcode">LeetCode</string>
    <string name="codechef">CodeChef</string>
    <string name="codeforces">CodeForces</string>
    <string name="total_problems_solved">Total Problems Solved</string>
    <string name="acceptance_rate">Acceptance Rate</string>
    <string name="current_rating">Current Rating</string>
    <string name="ongoing_contests">Ongoing Contests</string>
    <string name="today">In next 24 hours</string>
    <string name="max_rating">Max. Rating</string>
    <string name="level">Level</string>
    <string name="future_contests">Future Contests</string>
    <string name="hard">Hard</string>
    <string name="medium">Medium</string>
    <string name="easy">Easy</string>
    <string name="platform_name">Platform Name</string>
    <string name="how_should_i_call_you">How should I call you? 🤔</string>
    <string name="platforms">Platforms</string>
    <string name="hello">Hello,</string>
    <string name="menu">Menu</string>
    <string name="offline">Offline</string>
    <string name="oops_your_network_injured">Oops! Your network injured.</string>
    <string name="make_sure_you_are_connected_to_internet">Make sure you are connected to internet.</string>
    <string name="network_error">Network Error</string>
    <string name="save">Save</string>
    <string name="reminder_icon">reminder icon</string>
    <string name="img">img</string>
    <string name="end">End&#160;&#160;&#160;:</string>
    <string name="start">Start :</string>
    <string name="visit_website">Visit website</string>
    <string name="set_in_app_reminder">Set in-app reminder</string>
    <string name="contest_name_and_details">Contest Name and Details</string>
    <string name="dd_mm_yyyy_hh_mm_am_pm">DD-MM-YYYY HH:MM AM/PM</string>
    <string name="contest_name">Contest Name</string>
    <string name="on">On:</string>
    <string name="at">At:</string>
    <string name="contest_duration">Contest Duration</string>
    <string name="legendary_grandmaster">Legendary grandmaster</string>
    <string name="_4">4★</string>
    <string name="_1111">1111</string>
    <string name="rank">Rank</string>
    <string name="username">UserName</string>
    <string name="enter_a_valid_user_name">Enter a valid user name</string>
    <string name="remove">Remove</string>
    <string name="launch_game">Launch game</string>
    <string name="let_s_have_fun_for_a_while">Let us have fun for a while!</string>
    <string name="retry">Retry</string>
    <string name="date_format">"yyyy-MM-dd'T'HH:mm:ss.SSS'Z'"</string>
    <string name="set_google_reminder">Set google reminder</string>
    <string name="discard">Cancel</string>
    <string name="remind_me_before">Remind me before :</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="snooze">SNOOZE</string>
    <string name="dismiss">DISMISS</string>
    <string name="starts_in_30_minutes">Starts in 30 minutes</string>
    <string name="snooze_time">Snooze time :</string>
    <string name="title_activity_alarm_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="theme">Theme</string>
    <string name="system_default">System Default</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="deny_don_t_ask_again"><![CDATA[Deny & Don\'t ask again]]></string>
    <string name="ask_permission"><b>CPing</b> would like to show you full Screen Alarms</string>
    <string name="allow">Allow</string>
    <string name="deny">Deny</string>
    <string name="you_can_enable_it_later_in_settings">*You can enable it later in settings</string>
    <string name="auto_launch_permission_is_required_to_keep_alarms_active_after_device_restart">Auto-Launch permission is required to keep alarms active after device restart!</string>
    <string name="delete">Delete</string>
    <string name="hidden_contests">Hidden Contests</string>
    <string name="search">Search</string>
    <string name="search_with_contest_name">Search with contest name</string>
    <string name="permissions">Permissions</string>
    <string name="appear_on_top">Appear On Top</string>
    <string name="auto_start">Auto Start</string>
    <string name="auto_start_desc">Permission required to keep your alarms alive after device restart!</string>
    <string name="appear_on_top_desc">Permission required to show the alarm screen even when the device is locked!</string>
    <string name="allowed">ALLOWED</string>
    <string name="denied">DENIED</string>

</resources>