<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/alarm_screen_background"
    tools:context=".activities.AlarmRingingActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:contentDescription="@string/img"
        android:src="@drawable/ic_reminder_added"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/alarm_platform_name_text_View"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/nunito_bold"
        android:gravity="center"
        android:text="@string/platform_name"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/alarm_contest_name_text_View"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito_semi_bold"
        android:gravity="center"
        android:text="@string/contest_name"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alarm_platform_name_text_View" />

    <TextView
        android:id="@+id/alarm_time_description_text_View"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/nunito_regular"
        android:gravity="center"
        android:text="@string/starts_in_30_minutes"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alarm_contest_name_text_View" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alarm_time_description_text_View">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_weight="2"
            android:fontFamily="@font/nunito_semi_bold"
            android:gravity="start"
            android:text="@string/snooze_time"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <Button
            android:id="@+id/alarm_snooze_time_decrease_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.5"
            android:background="@drawable/alarm_activity_buttons"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/nunito_bold"
            android:foreground="?android:attr/selectableItemBackground"
            android:gravity="center"
            android:text="@string/minus"
            android:textColor="@color/atCoderKing"
            android:textSize="50sp" />

        <TextView
            android:id="@+id/alarm_snooze_time_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:fontFamily="@font/nunito_regular"
            android:gravity="center"
            android:text="@string/_1111"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <Button
            android:id="@+id/alarm_snooze_time_increase_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.5"
            android:background="@drawable/alarm_activity_buttons"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/nunito_bold"
            android:foreground="?android:attr/selectableItemBackground"
            android:gravity="center"
            android:text="@string/plus"
            android:textColor="@color/atCoderSevenDan"
            android:textSize="50sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/alarm_snooze_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/alarm_activity_buttons"
            android:clickable="true"
            android:drawableTop="@drawable/ic_snooze_icon"
            android:drawablePadding="10dp"
            android:focusable="true"
            android:fontFamily="@font/nunito_bold"
            android:foreground="?android:attr/selectableItemBackground"
            android:padding="15dp"
            android:text="@string/snooze"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/alarm_dismiss_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/alarm_activity_buttons"
            android:clickable="true"
            android:drawableTop="@drawable/ic_dismiss_icon"
            android:drawablePadding="10dp"
            android:focusable="true"
            android:fontFamily="@font/nunito_bold"
            android:foreground="?android:attr/selectableItemBackground"
            android:padding="15dp"
            android:text="@string/dismiss"
            android:textColor="@color/black" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>