<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/settingsBackground">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="300dp"
        android:layout_height="250dp"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/network_error"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        android:src="@drawable/ic_network_error" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/nunito_semi_bold"
        android:text="@string/oops_your_network_injured"
        android:textColor="@color/noInternetBG"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/nunito_regular"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:text="@string/make_sure_you_are_connected_to_internet"
        android:textColor="@color/noInternetBG"
        android:textSize="16sp" />

    <Button
        android:id="@+id/no_internet_retry_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/buttons_cping"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/nunito_semi_bold"
        android:foreground="?android:attr/selectableItemBackground"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/retry"
        android:textAllCaps="false"
        android:textColor="#2F2E41"
        android:textSize="18sp" />

</GridLayout>