<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:fontFamily="@font/nunito_semi_bold"
        android:gravity="center"
        android:letterSpacing="0.02"
        android:padding="20dp"
        android:text="@string/ask_permission"
        android:textColor="@color/fontColor"
        android:textSize="22sp" />

    <Button
        android:id="@+id/allow_permission"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:background="@color/transparent"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/nunito_bold"
        android:foreground="?android:attr/selectableItemBackground"
        android:text="@string/allow"
        android:textAllCaps="false"
        android:textColor="@color/permissionButtonTextColor"
        android:textSize="20sp" />

    <Button
        android:id="@+id/deny_permission"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        android:background="@color/transparent"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/nunito_bold"
        android:foreground="?android:attr/selectableItemBackground"
        android:text="@string/deny"
        android:textAllCaps="false"
        android:textColor="@color/permissionButtonTextColor"
        android:textSize="20sp" />

    <Button
        android:id="@+id/deny_and_do_not_ask_permission"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_marginBottom="15dp"
        android:background="@color/transparent"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/nunito_bold"
        android:foreground="?android:attr/selectableItemBackground"
        android:text="@string/deny_don_t_ask_again"
        android:textAllCaps="false"
        android:textColor="@color/permissionButtonTextColor"
        android:textSize="20sp" />

</GridLayout>