<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_marginStart="5dp"
    android:layout_marginEnd="5dp"
    android:layout_marginBottom="5dp"
    android:backgroundTint="@color/cardBackground"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    android:padding="5dp"
    app:cardCornerRadius="3dp"
    app:cardElevation="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/contestName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/nunito_semi_bold"
                android:text="@string/contest_name"
                android:textColor="@color/fontColor"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/contestStartDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/nunito_semi_bold"
                    android:text="@string/on"
                    android:textColor="@color/greyAndWhiteFont"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/contestStartTime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:fontFamily="@font/nunito_semi_bold"
                    android:text="@string/at"
                    android:textColor="@color/greyAndWhiteFont"
                    android:textSize="17sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/contestDuration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/nunito_semi_bold"
                android:text="@string/contest_duration"
                android:textColor="@color/greyAndWhiteFont"
                android:textSize="18sp" />

        </LinearLayout>

        <ImageView
            android:id="@+id/remainder_imageView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:contentDescription="@string/img"
            android:scaleX="0.5"
            android:scaleY="0.5"
            android:src="@drawable/ic_add_reminder" />

    </LinearLayout>

</androidx.cardview.widget.CardView>