<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/platform_image_view"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_margin="10dp"
        android:contentDescription="@string/img"
        android:src="@drawable/ic_codechef_logo" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/platform_name_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_semi_bold"
            android:text="@string/platform_name"
            android:textColor="@color/noInternetBG"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/platform_user_name_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_regular"
            android:text="@string/username"
            android:textColor="@color/noInternetBG"
            android:textSize="16sp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/pin_image_view"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_gravity="center"
        android:layout_marginEnd="25dp"
        android:contentDescription="@string/img"
        android:padding="5dp"
        android:rotation="45"
        android:src="@drawable/ic_pinned_icon" />

</LinearLayout>